Cleanups + final revisions to match Java 11 requirements