@@ -25,8 +25,8 @@ public class BaseClassLoadServiceImpl implements BaseClassLoadService {
 	 * @see energy.classLoadService.ClassLoadService#newInstance(java.lang.String)
 	 */
 	@Override
-	public Object newInstance(String className) throws ClassNotFoundException, InstantiationException, IllegalAccessException {
-		return this.forName(className).newInstance();
+	public Object newInstance(String className) throws  ClassNotFoundException, InstantiationException, IllegalAccessException,InvocationTargetException, NoSuchMethodException, SecurityException, NoClassDefFoundError {
+		return this.forName(className).getDeclaredConstructor().newInstance();
 	}
 
 	/* (non-Javadoc)
